force-app/main/default/objects/Competitor_evaluation__c/Competitor_evaluation__c.object-meta.xml
<CustomObject>
    <label>Competitor evaluation</label>
    <nameField>
        <displayFormat>CE-{00000}</displayFormat>
        <label>Competitor evaluation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Competitor evaluation</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>