force-app/main/default/objects/Competitor_evaluation__c/fields/Original_Opportunity_ID__c.field-meta.xml
<CustomField>
    <fullName>Original_Opportunity_ID__c</fullName>
    <description>For tracking after migration</description>
    <label>Original Opportunity ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>