force-app/main/default/objects/Competitor_evaluation__c/fields/Score_Price__c.field-meta.xml
<CustomField>
    <fullName>Score_Price__c</fullName>
    <label>Score Price</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>