force-app/main/default/objects/Competitor_evaluation__c/fields/Score_Quality_Other__c.field-meta.xml
<CustomField>
    <fullName>Score_Quality_Other__c</fullName>
    <label>Score Quality: Other</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>