force-app/main/default/objects/Competitor_evaluation__c/fields/Supplier__c.field-meta.xml
<CustomField>
    <fullName>Supplier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Supplier</label>
    <referenceTo>Suppliers__c</referenceTo>
    <relationshipLabel>Competitor evaluation</relationshipLabel>
    <relationshipName>Competitor_evaluation</relationshipName>
    <type>Lookup</type>
</CustomField>