force-app/main/default/objects/Competitor_evaluation__c/fields/Weight_Price__c.field-meta.xml
<CustomField>
    <fullName>Weight_Price__c</fullName>
    <formula>Evaluation_Area__r.Weight_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Weight Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>