force-app/main/default/objects/Competitor_evaluation__c/fields/Weight_Quality__c.field-meta.xml
<CustomField>
    <fullName>Weight_Quality__c</fullName>
    <formula>Evaluation_Area__r.Weight_Quality_Quality__c + 
Evaluation_Area__r.Weight_Quality_CV__c +
Evaluation_Area__r.Weight_Quality_Capacity__c +
Evaluation_Area__r.Weight_Quality_Other__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Weight Quality</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>