force-app/main/default/objects/Competitor_evaluation__c/fields/Weighted_Score_Price__c.field-meta.xml
<CustomField>
    <fullName>Weighted_Score_Price__c</fullName>
    <formula>Score_Price__c *  Evaluation_Area__r.Weight_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Weighted Score Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>