force-app/main/default/objects/Competitor_evaluation__c/validationRules/Weight_Capacity_consistency.validationRule-meta.xml
<ValidationRule>
    <fullName>Weight_Capacity_consistency</fullName>
    <active>true</active>
    <errorConditionFormula>AND( Evaluation_Area__r.Validate_Weight_Capacity__c = 0 ,  Score_Quality_Capacity__c != 0)</errorConditionFormula>
    <errorMessage>You have added a Quality Capacity score, but no Quality Capacity Weight in the opportunity!</errorMessage>
</ValidationRule>