force-app/main/default/objects/Competitor_evaluation__c/validationRules/Weight_CV_consistency.validationRule-meta.xml
<ValidationRule>
    <fullName>Weight_CV_consistency</fullName>
    <active>true</active>
    <errorConditionFormula>AND( Evaluation_Area__r.Validate_Weight_CV__c = 0 ,  Score_Quality_CV__c != 0)</errorConditionFormula>
    <errorMessage>You have added a Quality CV score, but no Quality CV Weight in the opportunity!</errorMessage>
</ValidationRule>