force-app/main/default/objects/Competitor_evaluation__c/validationRules/Weight_Other_consistency.validationRule-meta.xml
<ValidationRule>
    <fullName>Weight_Other_consistency</fullName>
    <active>true</active>
    <errorConditionFormula>AND( Evaluation_Area__r.Validate_Weight_Other__c = 0 ,  Score_Quality_Other__c != 0)</errorConditionFormula>
    <errorMessage>You have added a Quality Other score, but no Quality Other Weight in the opportunity!</errorMessage>
</ValidationRule>