force-app/main/default/objects/Competitor_evaluation__c/validationRules/Weight_Price_consistency.validationRule-meta.xml
<ValidationRule>
    <fullName>Weight_Price_consistency</fullName>
    <active>true</active>
    <errorConditionFormula>AND( Evaluation_Area__r.Validate_Weight_Price__c = 0 ,  Score_Price__c != 0)</errorConditionFormula>
    <errorMessage>You have added a Price score, but no Price Weight in the opportunity!</errorMessage>
</ValidationRule>