force-app/main/default/objects/Competitor_evaluation__c/validationRules/Weight_Quality_consistency.validationRule-meta.xml
<ValidationRule>
    <fullName>Weight_Quality_consistency</fullName>
    <active>true</active>
    <errorConditionFormula>AND( Evaluation_Area__r.Validate_Weight_Quality__c = 0 ,  Score_Quality_Quality__c != 0)</errorConditionFormula>
    <errorMessage>You have added a Quality score, but no weight value for Quality score in the opportunity!</errorMessage>
</ValidationRule>