force-app/main/default/objects/Competitor_evaluation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Result__c</columns>
    <columns>Score_Price__c</columns>
    <columns>Score_Quality_Quality__c</columns>
    <columns>Ranking__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>